# autoconf_testing

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  Stuff.com  configure.ac  junk.f  test.f
m4/: .ax_lapack.m4.swp  .ax_supermongo.m4.swp  ax_supermongo.m4
src/: Makefile.am  junk.f
